[fix] overflow fixed

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -38,6 +38,7 @@
 
   /* nav height */
   --nav-height: 64px;
+  overflow-x: clip;
 }
 
 /* fallback fonts */
@@ -56,6 +57,7 @@
 @media (width >= 900px) {
   :root {
     /* body sizes */
+
     --body-font-size-m: 18px;
     --body-font-size-s: 16px;
     --body-font-size-xs: 14px;
@@ -73,8 +75,8 @@
 body {
   display: none;
   margin: 0;
-  max-width: 1240px;
-  /* overflow-x: hidden; */
+  /* max-width: 100vw !important; */
+  overflow-x: clip;
   background-color: var(--background-color);
   color: var(--text-color);
   font-family: var(--body-font-family);
